--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://pyscript.net/releases/2025.3.1/core.css">
     <script type="module" src="https://pyscript.net/releases/2025.3.1/core.js"></script>
 
+    <script src="lib/mini-coi.js" scope="./"></script> 
     <script src="lib/codemirror.js"></script>
     <script src="lib/python.min.js"></script>
     <link rel="stylesheet" href="lib/codemirror.min.css">
