--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
     <link rel="stylesheet" href="pyalgoviz.css">
 </head>
 <body>
-    <script type="mpy" src="main.py" config="pyscript.toml"></script>
+    <script type="py" src="main.py" config="pyscript.toml"></script>
 </body>
 </html>
